Signed-off-by: qinguoming <qgm1702@126.com>

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body class="quarkdown quarkdown-plain">
 <aside id="margin-area-left" class="margin-area"></aside>
 <main>
-    <div class="container fullwidth" style="justify-items: center; text-align: center;"><p>Blog Index</p></div><ul><li><a href="./About/index.html">关于我</a></li><li><a href="./Wilson_PS4/index.html">Wilson非协调单元在PS4的推导</a></li></ul>
+    <div class="container fullwidth" style="justify-items: center; text-align: center;"><p>Blog Index</p></div><ul><li><a href="./About">关于我</a></li><li><a href="./Wilson_PS4">Wilson非协调单元在PS4的推导</a></li></ul>
 </main>
 <aside id="margin-area-right" class="margin-area"></aside>
 </body>
